# imdlib

./: CMakeLists.txt  README.md
python/: CMakeLists.txt  PythonModule.cpp
src/: IMDData.cpp  IMDData.h  IMDFile.cpp  IMDFile.h  IMDFileData.cpp  IMDFileData.h  IMDFileIOException.h  IMDFileMalformedException.h
test/: CMakeLists.txt  IMDTest.cpp
test/test/: TestIMDFile.cpp
